# chp-look-up

./: LICENSE  setup.cfg  setup.py
chp_look_up/: app_interface.py  apps.py  metakg.json  models.py  trapi_exceptions.py  trapi_interface.py  utils.py  views.py
chp_look_up/app/: __init__.py  apps.py  models.py  views.py
chp_look_up/app_meta_data/: curies.json  meta_knowledge_graph.json
chp_look_up/migrations/: 0001_initial.py  0002_auto_20220217_1648.py
chp_look_up_testproj/: manage.py
chp_look_up_testproj/chp_look_up_testproj/: asgi.py  settings.py  urls.py  wsgi.py
look-up-service/: views.py
look-up-service/data-to-import/: geneToPathway.json
migrations/: 0001_initial.py
pathway_look_up/: models.py
pathway_look_up/migrations/: 0002_auto_20210701_1641.py  0003_auto_20210701_1926.py
unit_tests/: gene_to_pathway_wildcard.json  test_chp_look_up.py  test_queries.json  test_trapi_interface.py
