[metadata]
name = look-up-service
version = 0.1
description = A django app for simple one hop look ups in the chp eco system
author = Luke Veenhuis
author_email = luke.j.veenhuis@dartmouth.edu
license = Apache-2.0 License
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: Apache-2.0 License
    Operating System :: OS Independent
    Programming Language :: Python 3.8
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
    Django